# electron-dragfile-plugin

./: .gitignore  CLAUDE.md  Cargo.toml  LICENSE  QA.md  README.md  TECHNICAL_DESIGN.md  USAGE.md  build.rs  debug-winit.js  index.js  package-lock.json  package.json  quick-drag-test.js  test-dynamic-drag.js  test-file-drag.js  test.js  全屏不透明方案.md
.github/workflows/: build.yml  test.yml
docs/: npm-setup.md
download-ripgrepTp0UUx/: tmp-file
example/: index.html  main.js  package.json  preload.js
example-advanced/: index.html  main.js  package.json  preload.js
rdev_local/src/: lib.rs  rdev.rs
rdev_local/src/linux/wayland/: mod.rs
rdev_local/src/linux/x11/: mod.rs
rdev_local/src/macos/: common.rs  grab.rs  listen.rs  mod.rs  simulate.rs
rdev_local/src/windows/: common.rs  grab.rs  listen.rs  mod.rs  simulate.rs
scripts/: build.sh  check-build-status.js  final-verification.js  test-build.sh  test-install.js  verify-multiplatform.js
src/: lib-basic.rs  lib.rs
test/: index.js  simple.js
