[package]
edition = "2021"
name = "electron-dragfile-plugin"
version = "1.0.9"
description = "Native addon for detecting mouse events in Node.js applications"
authors = ["Your Name <your.email@example.com>"]
license = "MIT"
repository = "https://github.com/yourusername/electron-dragfile-plugin"
keywords = ["mouse", "events", "native", "addon", "napi", "napi-rs"]
categories = ["api-bindings", "os"]

[lib]
crate-type = ["cdylib"]

[dependencies]
# NAPI bindings
napi = { version = "2", default-features = false, features = ["napi4", "async"] }
napi-derive = "2"

# Mouse event monitoring
rdev = { version = "0.5", features = ["unstable_grab"] }

# Async runtime
tokio = { version = "1", features = ["sync", "rt-multi-thread"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Static variables
lazy_static = "1.4"

[build-dependencies]
napi-build = "2"
