[package]
edition = "2021"
name = "electron-dragfile-plugin"
version = "1.0.9"
description = "Native addon for detecting mouse events in Node.js applications"
authors = ["Your Name <your.email@example.com>"]
license = "MIT"
repository = "https://github.com/yourusername/electron-dragfile-plugin"
keywords = ["mouse", "events", "native", "addon", "napi", "napi-rs"]
categories = ["api-bindings", "os"]

[lib]
crate-type = ["cdylib"]

[dependencies]
# NAPI bindings
napi = { version = "2", default-features = false, features = ["napi4", "async"] }
napi-derive = "2"

# Mouse event monitoring
rdev = { version = "0.5", features = ["unstable_grab"] }

# Async runtime
tokio = { version = "1", features = ["sync", "rt-multi-thread"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Static variables
lazy_static = "1.4"

# Window management and drag-and-drop
winit = "0.30.12"

# Screen capture for color detection
xcap = { version = "0.7.1", features = ["image"] }

# Image processing for color extraction
image = "0.24.7"

# macOS-specific window background color setting
[target.'cfg(target_os = "macos")'.dependencies]
objc2 = "0.5.0"
objc2-app-kit = { version = "0.2.2", features = ["NSColor", "NSWindow"] }
objc2-foundation = { version = "0.2.2", features = ["NSObject"] }
objc2-core-foundation = "0.3.2"

[[bin]]
name = "drag-monitor-helper"
path = "src/bin/drag-monitor-helper.rs"

[build-dependencies]
napi-build = "2"
