[package]
edition = "2021"
name = "electron-dragfile-plugin"
version = "1.0.13"
description = "Native addon for detecting mouse events in Node.js applications"
authors = ["Your Name <your.email@example.com>"]
license = "MIT"
repository = "https://github.com/yourusername/electron-dragfile-plugin"
keywords = ["mouse", "events", "native", "addon", "napi", "napi-rs"]
categories = ["api-bindings", "os"]

[lib]
crate-type = ["cdylib"]

[dependencies]
# NAPI bindings
napi = { version = "2", default-features = false, features = ["napi4", "async"] }
napi-derive = "2"

# Mouse event monitoring
rdev = { path = "./rdev_local", features = ["unstable_grab"] }

# Async runtime
tokio = { version = "1", features = ["sync", "rt-multi-thread"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Static variables
lazy_static = "1.4"

# macOS-specific APIs for drag and drop monitoring
[target.'cfg(target_os = "macos")'.dependencies]
objc2 = "0.6.3"
objc2-app-kit = { version = "0.2.2", features = ["NSEvent", "NSPasteboard", "block2", "NSApplication", "NSResponder"] }
objc2-foundation = { version = "0.2.2", features = ["NSObject", "NSString", "NSURL", "NSAutoreleasePool"] }
objc2-core-foundation = "0.3.2"
block2 = "0.5.1"
dispatch = "0.2.0"


[build-dependencies]
napi-build = "2"
